--- a/stepProjectFirst/css/style.css
+++ b/stepProjectFirst/css/style.css
@@ -351,7 +351,7 @@ a{
     display:flex;
     flex-direction: row;
     justify-content: center;
-    align-items: stretch;center;
+
     background: #18cfab;
     padding: 0 20px 0 20px;
     border-radius: 5%;
@@ -375,6 +375,8 @@ a{
 .slick-smaller{
     margin: 0 auto;
     width: 450px;
+    padding-bottom: 60px;
+
 }
 .slick-bigger-items{
 
@@ -396,4 +398,32 @@ a{
     border-radius: 50%;
     display: flex;
     justify-content: space-between;
+}
+
+.quotation-img{
+
+    margin: 40px 0 0 0;
+}
+.person-information{
+    background: url("../img/section-3.jpg");
+    background-position: center;
+}
+.person-profession{
+    padding-bottom: 40px;
+    margin-top: -18px;
+}
+
+footer{
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    text-align: center;
+    background-color:#22353f ;
+    margin-bottom: 40px;
+}
+.footer-text{
+    color: #717171;
+    font-size: 18px;
 }
