--- a/stepProjectFirst/css/style.css
+++ b/stepProjectFirst/css/style.css
@@ -155,7 +155,7 @@ a{
 
 
 .section-title{
-    padding: 40px 0 60px 0;
+    padding: 40px 0 0 0;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -186,6 +186,7 @@ a{
     text-align: center;
     align-items: center;
     justify-content: center;
+    margin-top: 60px;
 
 }
 
@@ -300,6 +301,8 @@ a{
     align-items: center;
     justify-content: center;
     padding-bottom: 50px;
+    margin-top: 60px;
+
 }
 .our-amazing-work-tabs-item{
     padding: 0 20px 0 20px;
@@ -362,6 +365,7 @@ a{
 
 
 .breaking-news-items{
+    margin-top: 60px;
 
 }
 .breaking-news-items-row-first , .breaking-news-items-row-second{
@@ -440,7 +444,6 @@ a{
 .slick-smaller{
     margin: 0 auto;
     width: 450px;
-    padding-bottom: 60px;
 
 }
 .slick-bigger-items{
@@ -454,24 +457,45 @@ a{
     justify-content: center;
     padding: 30px;
 }
+.img-second-border{
+    border-radius: 50%;
+    background: rgba(17,76,75,0.8);
+    width: 165px;
+    height: 165px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .slick-bigger-item-img{
     width: 140px;
     height: 140px;
     border-radius: 50%;
+    border: 4px solid #18cfab;
 }
 .slick-smaller-item{
     border-radius: 50%;
     display: flex;
     justify-content: space-between;
+    width: 83px;
+    height: 83px;
+   border:4px solid rgba(17,57,67,0.7);
+
 }
+
+
 
 .quotation-img{
-
-    margin: 40px 0 0 0;
+    margin: 100px 0 0 0;
 }
 .person-information{
-    background: url("../img/section-3.jpg");
-    background-position: center;
+    background: url("../img/section-3.jpg") center;
+    padding-bottom: 60px;
+
+}
+.slick-about-person{
+    color: #afb1b1;
+    font-family: inherit;
 }
 .person-profession{
     padding-bottom: 40px;
@@ -482,13 +506,15 @@ footer{
     height: 100px;
     display: flex;
     flex-direction: column;
-
     justify-content: center;
     text-align: center;
     background-color:#22353f ;
-    margin-bottom: 40px;
+    margin: 30px 0 40px 0;
 }
 .footer-text{
     color: #717171;
     font-size: 18px;
+}
+.green-text-footer{
+    color:#18cfab ;
 }
