--- a/stepProjectFirst/css/style.css
+++ b/stepProjectFirst/css/style.css
@@ -477,9 +477,9 @@ a{
     border-radius: 50%;
     display: flex;
     justify-content: space-between;
-    width: 83px;
-    height: 83px;
-   border:4px solid rgba(17,57,67,0.7);
+    width: 83px !important;
+    height: 83px !important;
+    box-shadow: 0 0 9px 3px teal;
 
 }
 
