--- a/javascript-1/jshomework9/css/style.css
+++ b/javascript-1/jshomework9/css/style.css
@@ -24,7 +24,56 @@ body{
     cursor: pointer;
 }
 
-.tabs-title.active {
+.tabs-title .active {
     background-color:#937341 ;
     color: #23201D;
+}
+.tabs-title .first{
+    background-color:#937341 ;
+    color: #23201D;
+}
+
+.gogi {
+    width: 150px;
+    padding: 50px;
+    background-color: tan;
+}
+* {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+.mail-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: calc(100% - 80px);
+    margin: 0 auto;
+}
+
+.mail-item {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    border: 1px solid lightgray;
+}
+
+.mail-item-from::before {
+    content: 'from: ';
+}
+.mail-item-to::before {
+    content: 'to: ';
+}
+
+.mail-item-text {
+    margin-top: 15px;
+}
+
+.mail-item-delete {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    align-self: flex-end;
 }
