--- a/html-css-1/homework7/css/style.css
+++ b/html-css-1/homework7/css/style.css
@@ -2,32 +2,84 @@ body {
     overflow: hidden;
 }
 .container {
-    height: 1700px;
+    height: 1200px;
+    width: 1200px;
     font-family: sans-serif;
-    background-color: black;
-    color: yellow;
+    background-color: rgb(17,17,16);
+    color:rgb(245,204,0);
     perspective: 1700px;
     transform-origin: top center;
     transform: scale(1) rotateX(300deg);
+    margin: 0 auto;
 }
-.container-text {
+.text {
     animation: to-top 30s  ease-in 0s infinite;
-    margin: 0 300px;
-    font-size: 70px;
+    margin: 0 auto;
+    font-size: 90px;
     transform-origin: center center;
+    width: 1200px;
 }
+
 @keyframes to-top {
-    from {
-        transform: translateY(1180px) rotateX(30deg);
+    0% {
+        transform: translateY(1200px) rotateX(30deg);
+        font-size: 90px;
 
     }
-    to {
-        transform: translateY(-1800px) rotateX(30deg);
 
+    25%{
+        font-size: 85px;
+        margin: 0 auto;
+        /*margin: 0 75px 0 75px;*/
+        width: 1150px;
+        /*transform:  rotateX(35deg);*/
+
+    }
+
+    50% {
+        font-size: 70px;
+        margin: 0 auto;
+
+        /*margin: 0 100px 0 100px;*/
+        /*transform:  rotateX(40deg);*/
+        width: 1100px;
+    }
+    51%{
+        width: 1050px;
+        margin: 0 auto;
+
+        font-size: 60px;
+        /*margin: 0 125px 0 125px;*/
+        /*transform:  rotateX(45deg);*/
+    }
+
+    75%{
+        font-size: 45px;
+        /*margin: 0 150px 0 150px;*/
+        /*transform:  rotateX(50deg);*/
+        width: 900px;
+        margin: 0 auto;
+
+
+    }
+    80%{
+        font-size: 40px;
+
+    }
+    100%{
+        font-size: 30px;
+        /*margin: 0 180px 0 180px;*/
+        width: 850px;
+        margin: 0 auto;
+
+        transform:translateY(-10px)  rotateX(30deg);
     }
 }
 .text{
-    display: block;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     word-spacing: 20px;
     line-height: 1.5;
 }
