--- a/stepProjectForkio/src/scss/media/_header-media.scss
+++ b/stepProjectForkio/src/scss/media/_header-media.scss
@@ -2,35 +2,39 @@
   html{
     font-size: 10px;
   }
-  .forkio{
+}
+@media screen and(min-width:400px)and(max-width: 480px){
+.forkio {
 
-    &__slogan {
-      &__dropDownMenu {
-        width:25rem;
-        height:36.7rem;
+  &__slogan {
+    &__dropDownMenu {
+      width: 45rem;
+      height: 36.7rem;
+      &__list{
+        &--link{
+          font-size: 3rem;
+        }
+
       }
     }
-    
-    &__buttonDwn{
-
-      bottom: -2.5rem;
-      margin-left: 3.5rem;
-    }
-
-    &--dwnText{
-      bottom: -5.5rem;
-      margin-left: 6rem;
-    }
-
   }
 
-}
+  &__buttonDwn {
+    bottom: -2.5rem;
+    margin-left: 8.5rem;
+  }
 
-@media screen and(min-width: 481px) and(max-width: 768px) {
+  &--dwnText {
+    bottom: -5.5rem;
+    margin-left: 13rem;
+  }
+}
+}
+@media screen and(min-width: 768px) and(max-width: 991px) {
   .forkio {
     background-position-y: 153rem;
-    background-position-x: -28rem;
-    background-size: 136rem;
+    background-position-x: -20rem;
+    background-size: 130rem;
 
     &__navbar {
       display: block;
@@ -38,6 +42,7 @@
 
       &--logo {
         position: absolute;
+
       }
 
       &__menu {
@@ -49,49 +54,396 @@
         display: inline-block;
         top: 3.8rem;
         left: 7rem;
+        font-size: 3rem;
       }
 
       &__button {
         margin-top: 2rem;
-        margin-left: 60rem;
+        margin-left: 70%;
         width: 16rem;
         height: 4rem;
+
       }
 
       &__menu780 {
         display: flex;
-        margin: -4rem 0 0 11rem;
-
+        margin: -4rem 0 0 16%;
         &--item {
-          font-size: 1.7rem;
+          font-size: 130%;
           text-decoration: none;
           color: #8d81ac;
           font-family: 'Montserrat', bold;
-          margin: 2rem 2rem 2rem 2rem;
+          margin: 2rem 0 2rem 7%;
+
         }
       }
 
     }
 
     &__slogan {
+      &__dropDownMenu{
+        display: none;
+      }
       &--tittle {
         font-size: 7rem;
       }
     }
 
     &__buttonDwn {
-      bottom: -2.6rem;
-      width: 34rem;
-      height: 5.2rem;
-      margin-left: 22rem;
+      bottom: -3rem;
+      width: 39rem;
+      height: 6rem;
+      margin-left: 30%;
 
       &--text {
-        font-size: 2rem;
+        font-size: 2.4rem;
       }
     }
     &--dwnText{
-      margin-left: 28rem;
+      margin-left: 38%;
       font-size: 1.5rem;
     }
   }
 }
+
+@media screen and(min-width: 481px) and(max-width: 767px) {
+  html {
+    font-size: 8px;
+    .forkio {
+      background-position-y: 153rem;
+      background-position-x: -28rem;
+      background-size: 136rem;
+      &__navbar {
+        display: block;
+        position: relative;
+        &--logo {
+          position: absolute;
+        }
+        &__menu {
+          display: none;
+        }
+        &--imgText {
+          position: absolute;
+          display: inline-block;
+          top: 3.8rem;
+          left: 7rem;
+        }
+        &__button {
+          margin-top: 2rem;
+          margin-left: 70%;
+          width: 16rem;
+          height: 4rem;
+        }
+        &__menu780 {
+          display: flex;
+          margin: -4rem 0 0 16%;
+          &--item {
+            font-size: 1.5rem;
+            text-decoration: none;
+            color: #8d81ac;
+            font-family: 'Montserrat', bold;
+            margin: 2rem 2% 2rem 2%;
+          }
+        }
+      }
+      &__slogan {
+        &__dropDownMenu {
+          display: none;
+        }
+
+        &--tittle {
+          font-size: 7rem;
+        }
+      }
+
+      &__buttonDwn {
+        bottom: -2.6rem;
+        width: 34rem;
+        height: 5.2rem;
+        margin-left: 22rem;
+
+        &--text {
+          font-size: 2rem;
+        }
+      }
+
+      &--dwnText {
+        margin-left: 28rem;
+        font-size: 1.5rem;
+      }
+    }
+  }
+}
+
+@media screen and(min-width: 1201px) {
+  html {
+    font-size: 15px;
+
+    .forkio {
+      background-position-y: 153rem;
+      background-position-x: - 21rem;
+      background-size: 136rem;
+
+      &__navbar {
+        display: block;
+        position: relative;
+
+        &--logo {
+          position: absolute;
+          margin-left: 3%;
+          background-position-x: - 20rem;
+          background-size: 130rem;
+
+          &__navbar {
+            display: flex;
+            //flex-direction: row;
+            //justify-content: center;
+            align-items: center;
+
+            &--logo {
+              margin-left: 3%;
+            }
+
+            &__menu {
+              display: none;
+            }
+
+            &--imgText {
+              position: absolute;
+              display: inline-block;
+              top: 3.8rem;
+              margin-left: 10%;
+
+            }
+
+            &__button {
+              margin-top: 2rem;
+              margin-left: 75%;
+              width: 16rem;
+              height: 4rem;
+
+            }
+
+            &__menu780 {
+              display: flex;
+              margin: - 4 rem 0 0 20%;
+
+              &--item {
+                font-size: 1.4rem;
+                text-decoration: none;
+                color: #8d81ac;
+                font-family: 'Montserrat', bold;
+              }
+            }
+
+          }
+
+          &__slogan {
+            &__dropDownMenu {
+              display: none;
+            }
+
+            &--tittle {
+              font-size: 7rem;
+            }
+          }
+
+          &__buttonDwn {
+            bottom: - 2.6rem;
+            width: 34rem;
+            height: 5.2rem;
+            margin-left: 32%;
+
+            &--text {
+              font-size: 2.4rem;
+            }
+          }
+
+          &--dwnText {
+            margin-left: 39%;
+            font-size: 1.5rem;
+          }
+        }
+      }
+    }
+  }
+}
+  @media screen and(min-width: 992px) and(max-width: 1200px) {
+    html {
+      font-size: 12px;
+
+      .forkio {
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 102rem;
+        margin: 0 auto;
+
+        &__navbar {
+          margin: 0;
+          display: flex;
+          flex-direction: row;
+
+          &--logo {
+            width: 5rem;
+            margin-left: 3%;
+          }
+
+          &--imgText {
+            display: block;
+            margin: 4rem 0 0 1%;
+          }
+
+          &__menu {
+            display: none;
+          }
+
+          &__menu780 {
+            display: flex;
+            align-items: center;
+
+            &--item {
+              font-size: 1.4rem;
+              text-decoration: none;
+              color: #8d81ac;
+              font-family: 'Montserrat', bold;
+              padding: 0 1rem 0 1rem;
+
+            }
+          }
+
+          &__button {
+            display: none;
+          }
+
+          &__button2 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-right: 5rem;
+
+          }
+
+
+        }
+
+        &__buttonDwn {
+          bottom: 2.5rem;
+          width: 30rem;
+          height: 5rem;
+          margin-left: 35%;
+        }
+
+        &--dwnText {
+          bottom: 0.5rem;
+          margin-left: 39%;
+        }
+
+        &__slogan {
+          &__dropDownMenu {
+            display: none;
+          }
+
+          &--tittle {
+            font-size: 8rem;
+          }
+
+          &--text {
+            font-size: 3rem;
+          }
+
+          &--subtext {
+            font-size: 2rem;
+          }
+        }
+
+      }
+  }
+}
+    @media screen and(min-width: 1201px) {
+      html {
+        font-size: 12px;
+        .forkio {
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: 102rem;
+          margin: 0 auto;
+          padding: 0 10px 0 10px;
+
+          &__navbar {
+            margin: 0 -10px 0 -10px;
+            display: flex;
+            flex-direction: row;
+            &--logo {
+              width: 5rem;
+              margin-left: 3%;
+            }
+
+            &--imgText {
+              display: block;
+              margin: 4rem 0 0 12%;
+            }
+
+            &__menu {
+              display: none;
+            }
+
+            &__menu780 {
+              display: flex;
+              align-items: center;
+
+              &--item {
+                font-size: 1.5rem;
+                text-decoration: none;
+                color: #8d81ac;
+                font-family: 'Montserrat', bold;
+                padding: 0 1rem 0 1rem;
+              }
+            }
+
+            &__button {
+              display: none;
+            }
+
+            &__button2 {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              margin-right: 5rem;
+
+            }
+          }
+
+          &__buttonDwn {
+            bottom: 2.5rem;
+            width: 30rem;
+            height: 5rem;
+            margin-left: 35%;
+          }
+
+          &--dwnText {
+            bottom: 0.5rem;
+            margin-left: 39%;
+          }
+
+          &__slogan {
+            &__dropDownMenu {
+              display: none;
+            }
+
+            &--tittle {
+              font-size: 8rem;
+            }
+
+            &--text {
+              font-size: 3rem;
+            }
+
+            &--subtext {
+              font-size: 2rem;
+            }
+          }
+
+        }
+      }
+
+    }
